# NERchc

./: README.md
NER_V1SHOW/: pyproject.toml
NER_V1SHOW/data/: 01明实录太祖实录（257卷）.txt  02明实录太宗实录（274卷）.txt  04明实录明宣宗实录（115卷）.txt
NER_V1SHOW/outputs/demo/: entities.json  summary.json
NER_V1SHOW/outputs/demo/review/: settings.json
NER_V1SHOW/outputs/full/: summary.json
NER_V1SHOW/outputs/full/ui/: index.html
NER_V1SHOW/src/ming_ner/: __init__.py  bioes.py  cli.py  extract.py  gazetteer.py  preprocess.py  schema.py
NER_V1SHOW/tests/: test_preprocess_extract.py  test_review_workflow.py
NER_WORKPLACE/: .gitignore  README.md  requirements-train.txt  requirements.txt  run.py
NER_WORKPLACE/backend/: __init__.py  db.py  main.py  models.py  settings_store.py
NER_WORKPLACE/backend/routers/: __init__.py  annotate.py  corpus.py  dataset.py  prompt.py  results.py  review.py  schema.py  (+3 more)
NER_WORKPLACE/config/: default.yaml
NER_WORKPLACE/frontend/: app.js  index.html  style.css
applc/: .gitignore  README.md  how it work.md  requirements.txt  run.py
applc/Aimd/: T0001_20260626_145818.md  T0001_20260626_152010.md  T0001_20260626_153006.md  T0001_20260626_153157.md
applc/backend/: __init__.py  db.py  main.py
applc/docs/: research_sources.md
applc/frontend/: app.js  index.html  styles.css
applc/tests/: test_api_smoke.py  test_services.py
data/: 03明实录仁宗实录（15卷）.txt
ming_ner/: __init__.py  __main__.py
src/ming_ner/: __main__.py  annotations.py  cbdb_client.py  data_api.py  dictionaries.py  export.py  metrics.py  modeling.py  server.py
ui/: index.html
(+48 files in other folders)
