[project]
name = "ming-ner"
version = "0.1.0"
description = "Runnable MVP for entity extraction, CBDB linking, and annotation UI over Ming Shilu texts."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
http = ["requests>=2.31.0"]
test = ["pytest>=8.0.0"]

[project.scripts]
ming-ner = "ming_ner.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
